--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pytest = "^7.4.2"
 flake8 = "^6.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
