--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "gendiff"}]
 python = "^3.10"
 pytest = "^7.4.2"
 flake8 = "^6.1.0"
+pytest-cov = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
