--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: paambaati/codeclimate-action@v5.0.0
         if: github.ref_name == 'main'
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_HEXLET_ID }}
         with:
           coverageCommand: make test-coverage
           debug: true
