--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 pytest = "^7.4.2"
 flake8 = "^6.1.0"
 pytest-cov = "^4.1.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
